# potato_debugger

./: .gitignore  CMakeLists.txt  commands.md  readme.md
include/libpdb/: bit.hpp  error.hpp  libpdb.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  types.hpp
include/libpdb/detail/: register.inc
src/: CMakeLists.txt  libpdb.cpp  pipe.cpp  process.cpp  registers.cpp
test/: CMakeLists.txt  erros.md  tests.cpp
test/targets/: run_endlessly.cpp
tools/: CMakeLists.txt  pdb.cpp
